--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="flex flex-wrap justify-center gap-6">
                 <a href="#curriculum" class="px-10 py-5 bg-blue-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">কোর্স শুরু করুন</a>
                 <div class="px-10 py-5 glass rounded-2xl font-bold text-lg">মোট ২০টি অধ্যায়</div>
-               <a href="http://arabic-verb-conjugator.vercel.app" target="_blank" class="px-10 py-5 bg-blue-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">আরবি ক্রিয়া কনজুগেশন</a><br>
+               <a href="http://arabic-verb-conjugator.vercel.app" target="_blank" class="px-10 py-5 bg-blue-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">আরবি ক্রিয়া কনজুগেশন</a>
                <a href="http://arabic-verb-conjugator.vercel.app" target="_blank" class="px-10 py-5 bg-blue-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">আরবি বাক্যসমুহ বিল্ডার</a>
             </div>
         </div>
@@ -210,5 +210,6 @@
 </body>
 
 </html>
+
 
 
