--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     </section>
 
     <footer class="py-12 bg-black text-center text-slate-600 border-t border-white/5">
-        <p class="mb-4">© <a href="https://www.grameenphone.academy/public-profile/GP153876" target = "_blank">মোঃ আনিছুর রহমান</a> | আরবী ব্যাকরণ | সর্বস্বত্ব সংরক্ষিত</p>
+        <p class="mb-4">© <a href="https://www.grameenphone.academy/public-profile/GP153876" target = "_blank" style="color:SkyBlue;"><b>মোঃ আনিছুর রহমান</b></a> | আরবী ব্যাকরণ | সর্বস্বত্ব সংরক্ষিত</p>
         <div class="arabic-text text-2xl text-slate-400">اللغة العربية لغة القرآن</div>
     </footer>
 
@@ -210,6 +210,7 @@
 </body>
 
 </html>
+
 
 
 
