--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </p>
             <div class="flex flex-wrap justify-center gap-6">
                 <a href="#curriculum" class="px-10 py-5 bg-blue-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">কোর্স শুরু করুন</a>
-                <div class="px-10 py-5 glass rounded-2xl font-bold text-lg">মোট ২০টি অধ্যায়</div>
+                <div styels="color:orange;"class="px-10 py-5 glass rounded-2xl font-bold text-lg">কোর্সটি সম্পূর্ণ বিনামূল্যে</div>
                <a href="http://arabic-verb-conjugator.vercel.app" target="_blank" class="px-10 py-5 bg-blue-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">আরবি ক্রিয়া কনজুগেশন</a>
                <a href="http://arabic-sentence-builder.vercel.app" target="_blank" class="px-10 py-5 bg-blue-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">আরবি বাক্যসমুহ বিল্ডার</a>
             </div>
@@ -210,6 +210,7 @@
 </body>
 
 </html>
+
 
 
 
