--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         
         <div class="max-w-6xl mx-auto text-center relative z-10">
             <span class="inline-block px-4 py-1 bg-blue-500/20 text-blue-400 rounded-full text-sm font-bold tracking-widest uppercase mb-6 animate-pulse">অনলাইন লার্নিং ড্যাশবোর্ড</span><br>
-            <h1 class="text-6xl md:text-8xl font-black mb-8 leading-tight">আরবী ব্যাকরণ <br><span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-emerald-400">কোর্স</span></h1>
+            <h1 class="text-6xl md:text-8xl font-black mb-8 leading-tight">আরবী ব্যাকরণ <br><span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-emerald-400">কোর্স-প্লাস</span></h1>
             <p class="text-xl md:text-2xl text-slate-400 max-w-3xl mx-auto mb-12 font-light leading-relaxed">
                 শুন্য থেকে উন্নত পর্যায় পর্যন্ত আরবী ব্যাকরণের ২০টি গুরুত্বপূর্ণ অধ্যায়কে সাজানো হয়েছে চারটি ইন্টারেক্টিভ মডিউলে। প্রতিটি পাঠে রয়েছে বিশাল বর্ণনা ও উদাহরণ।
             </p>
@@ -209,6 +209,7 @@
 </body>
 
 </html>
+
 
 
 
