--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <a href="#curriculum" class="px-10 py-5 bg-blue-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">এক্ষুনি কোর্সটি শুরু করুন</a>
                 <a href="http://arabic-verb-conjugator.vercel.app" target="_blank" class="px-10 py-5 bg-blue-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">আরবি ক্রিয়া কনজুগেশন</a>
                 <a href="http://arabic-sentence-builder.vercel.app" target="_blank" class="px-10 py-5 bg-blue-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">আরবি বাক্যসমুহ বিল্ডার</a>
+                <a href="https://learn-quran-50.vercel.app" target="_blank" class="px-10 py-5 bg-blue-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">কুরআনের ৫০ ভাগ শিক্ষা</a>
             </div>
         </div>
     </header>
@@ -209,6 +210,7 @@
 </body>
 
 </html>
+
 
 
 
