--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 শুন্য থেকে উন্নত পর্যায় পর্যন্ত আরবী ব্যাকরণের ২০টি গুরুত্বপূর্ণ অধ্যায়কে সাজানো হয়েছে চারটি ইন্টারেক্টিভ মডিউলে। প্রতিটি পাঠে রয়েছে সহজ বর্ণনা ও উদাহরণ।
             </p>
             <div class="flex flex-wrap justify-center gap-6">
-                <a href="#curriculum" class="px-10 py-5 bg-blue-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">এক্ষুনি কোর্সটি শুরু করুন</a>
+                <a href="#curriculum" class="px-10 py-5 bg-blue-600 hover:bg-orange-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">এক্ষুনি কোর্সটি শুরু করুন</a>
                 <a href="http://arabic-verb-conjugator.vercel.app" target="_blank" class="px-10 py-5 bg-blue-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">আরবি ক্রিয়া কনজুগেশন</a>
                 <a href="http://arabic-sentence-builder.vercel.app" target="_blank" class="px-10 py-5 bg-blue-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">আরবি বাক্যসমুহ বিল্ডার</a>
                 <a href="https://learn-quran-50.vercel.app" target="_blank" class="px-10 py-5 bg-blue-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">কুরআনের ৫০ ভাগ শিক্ষা</a>
@@ -209,6 +209,7 @@
 </body>
 
 </html>
+
 
 
 
