--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <h3 class="text-2xl font-black text-slate-900 mb-4">মডিউল ১: প্রাথমিক ভিত্তি</h3>
                 <p class="text-slate-500 mb-8 leading-relaxed">আরবী শব্দের মূল গঠন, নির্দিষ্টতা এবং লিঙ্গ ভেদে শব্দের পরিবর্তনের প্রাথমিক পাঠ।</p>
                 <ul class="space-y-3 mb-10 text-slate-700 font-medium">
-                    <li class="flex items-center gap-3"><i class="fa-solid fa-circle-check text-emerald-500"></i> অধ্যায় ১-৫: ইসম, ফেল ও হরফ</li>
+                    <li class="flex items-center gap-3"><i class="fa-solid fa-circle-check text-emerald-500"></i> অধ্যায় ১-৫: ইসম, ফিল ও হরফ</li>
                     <li class="flex items-center gap-3"><i class="fa-solid fa-circle-check text-emerald-500"></i> শামশিয়াহ-কমরিয়াহ ও মারিফা</li>
                     <li class="flex items-center gap-3"><i class="fa-solid fa-circle-check text-emerald-500"></i> হারফুল জার এর বিস্তারিত ব্যবহার</li>
                 </ul>
@@ -111,7 +111,7 @@
                 <ul class="space-y-3 mb-10 text-slate-700 font-medium">
                     <li class="flex items-center gap-3"><i class="fa-solid fa-circle-check text-emerald-500"></i> অধ্যায় ১১-১৫: মারফু, মানসুব, মাজরুর</li>
                     <li class="flex items-center gap-3"><i class="fa-solid fa-circle-check text-emerald-500"></i> আদাদ (বচন) ও আতফু</li>
-                    <li class="flex items-center gap-3"><i class="fa-solid fa-circle-check text-emerald-500"></i> ফেল: মাদী ও মুদারী বিশ্লেষণ</li>
+                    <li class="flex items-center gap-3"><i class="fa-solid fa-circle-check text-emerald-500"></i> ফিল: মাদী ও মুদারী বিশ্লেষণ</li>
                 </ul>
                 <a href="chapter11-15.html" class="inline-flex items-center gap-3 px-8 py-4 bg-slate-900 text-white rounded-xl font-bold hover:bg-amber-600 transition-colors w-full justify-center">মডিউল খুলুন <i class="fa-solid fa-arrow-right"></i></a>
             </div>
@@ -167,7 +167,7 @@
                         <li>১২. মারফু-মানসুব-মাজরুর</li>
                         <li>১৩. আদাদ (বচন)</li>
                         <li>১৪. আতফু (অব্যয়)</li>
-                        <li>১৫. ফেল (মাদী-মুদারে)</li>
+                        <li>১৫. ফিল (মাদী-মুদারি)</li>
                     </ul>
                 </div>
 
@@ -209,6 +209,7 @@
 </body>
 
 </html>
+
 
 
 
