--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="flex flex-col md:flex-row justify-between items-end mb-20 gap-6">
             <div class="max-w-xl">
                 <h2 class="text-4xl font-black text-slate-900 mb-4">আপনার লার্নিং পাথওয়ে</h2>
-                <p class="text-lg text-slate-600">নিচের মডিউলগুলো ধারাবাহিকভাবে অধ্যয়ন করুন। প্রতিটি মডিউলে ৫টি করে অধ্যায় অত্যন্ত বিস্তারিতভাবে আলোচনা করা হয়েছে।</p>
+                <p class="text-lg text-slate-600">নিচের মডিউলগুলো ধারাবাহিকভাবে অধ্যয়ন করুন। প্রতিটি মডিউলে ৫টি করে অধ্যায় খুব সহজভাবে আলোচনা করা হয়েছে।</p>
             </div>
             <div class="text-slate-400 font-mono"><b>স্টেপ-বাই-স্টেপ লার্নিং</b></div>
         </div>
@@ -209,6 +209,7 @@
 </body>
 
 </html>
+
 
 
 
