--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
                     <p class="text-slate-500">উদাহরণ</p>
                 </div>
                 <div class="text-center">
-                    <h3 class="text-4xl font-black text-slate-800">৪</h3>
-                    <p class="text-slate-500">পূর্ণাঙ্গ মডিউল</p>
+                    <h3 class="text-4xl font-black text-slate-800">২০</h3>
+                    <p class="text-slate-500">মূল টপিকস</p>
                 </div>
                 <div class="text-center">
-                    <h3 class="text-4xl font-black text-slate-800">২০</h3>
-                    <p class="text-slate-500">মূল টপিক</p>
+                    <h3 class="text-4xl font-black text-slate-800">৪</h3>
+                    <p class="text-slate-500">পূর্ণাঙ্গ মডিউল</p>
                 </div>
             </div>
         </div>
@@ -209,4 +209,5 @@
 </body>
 
 </html>
+
 
