--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="text-center">
                     <h3 class="text-4xl font-black text-slate-800">৪</h3>
-                    <p class="text-slate-500">পূর্ণাঙ্গ মডিউল</p>
+                    <p class="text-slate-500">পূর্ণাঙ্গ মডিউলস</p>
                 </div>
             </div>
         </div>
@@ -209,5 +209,6 @@
 </body>
 
 </html>
+
 
 
