--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <div class="flex flex-wrap justify-center gap-6">
                 <a href="#curriculum" class="px-10 py-5 bg-orange-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">এক্ষুনি কোর্সটি শুরু করুন</a>
                 <a href="http://arabic-verb-conjugator.vercel.app" target="_blank" class="px-10 py-5 bg-purple-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">আরবি ক্রিয়া কনজুগেশন</a>
-                <a href="http://arabic-sentence-builder.vercel.app" target="_blank" class="px-10 py-5 bg-green-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">আরবি বাক্যসমুহ বিল্ডার</a>
-                <a href="https://learn-quran-50.vercel.app" target="_blank" class="px-10 py-5 bg-pink-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">কুরআনের ৫০ ভাগ শিক্ষা</a>
+                <a href="http://arabic-sentence-builder.vercel.app" target="_blank" class="px-10 py-5 bg-green-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">আরবি বাক্য তৈরি করুন</a>
+                <a href="https://learn-quran-50.vercel.app" target="_blank" class="px-10 py-5 bg-pink-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">কুরআনের ৫০ ভাগ শিখুন</a>
             </div>
         </div>
     </header>
@@ -209,6 +209,7 @@
 </body>
 
 </html>
+
 
 
 
