--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <p class="text-slate-500 mb-8 leading-relaxed">জটিল রূপান্তর পদ্ধতি, প্রশ্নবোধক বাক্য এবং জুমলার চূড়ান্ত প্রকারভেদ।</p>
                 <ul class="space-y-3 mb-10 text-slate-700 font-medium">
                     <li class="flex items-center gap-3"><i class="fa-solid fa-circle-check text-emerald-500"></i> অধ্যায় ১৬-২০: সরফ ও মাজহুল</li>
-                    <li class="flex items-center gap-3"><i class="fa-solid fa-circle-check text-emerald-500"></i> প্রশ্নবোধক ও নাসব দানকারী হরফ</li>
+                    <li class="flex items-center gap-3"><i class="fa-solid fa-circle-check text-emerald-500"></i> প্রশ্নবোধক ও না-বোধক বাক্য</li>
                     <li class="flex items-center gap-3"><i class="fa-solid fa-circle-check text-emerald-500"></i> জুমলা ইসমিয়াহ ও ফিলিয়াহ</li>
                 </ul>
                 <a href="chapter16-20.html" class="inline-flex items-center gap-3 px-8 py-4 bg-slate-900 text-white rounded-xl font-bold hover:bg-purple-600 transition-colors w-full justify-center">মডিউল খুলুন <i class="fa-solid fa-arrow-right"></i></a>
@@ -177,7 +177,7 @@
                     <ul class="space-y-4 text-slate-400">
                         <li>১৬. সরফ (শব্দ রূপান্তর)</li>
                         <li>১৭. মাজহুল (Passive)</li>
-                        <li>১৮. আন নাসিয়া</li>
+                        <li>১৮. আন নাহিইয়াহ</li>
                         <li>১৯. ইস্তিফহামিয়া</li>
                         <li>২০. জুমলার প্রকার</li>
                     </ul>
@@ -210,3 +210,4 @@
 </body>
 
 </html>
+
