--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <h2 class="text-4xl font-black text-slate-900 mb-4">আপনার লার্নিং পাথওয়ে</h2>
                 <p class="text-lg text-slate-600">নিচের মডিউলগুলো ধারাবাহিকভাবে অধ্যয়ন করুন। প্রতিটি মডিউলে ৫টি করে অধ্যায় খুব সহজভাবে আলোচনা করা হয়েছে।</p>
             </div>
-            <div class="text-slate-400 font-mono"><b>স্টেপ-বাই-স্টেপ লার্নিং</b></div>
+            <div class="text-slate-400 font-mono">STEP-BY_STEP ARABIC GRAMMAR LEARNING</div>
         </div>
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
@@ -210,4 +210,5 @@
 </body>
 
 </html>
+
 
