--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                  <a href="https://arabic-word-builder.vercel.app" target="_blank" class="px-10 py-5 bg-yellow-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">আরবি শব্দ তৈরি করুন</a>
                 <a href="http://arabic-sentence-builder.vercel.app" target="_blank" class="px-10 py-5 bg-green-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">আরবি বাক্য তৈরি করুন</a>
                 <a href="https://learn-quran-50.vercel.app" target="_blank" class="px-10 py-5 bg-pink-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">কুরআনের ৫০ ভাগ শিখুন</a>
-                <a href="quranic-grammar.html" target="_blank" class="px-10 py-5 bg-blue-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all">সহজে কুরআনিক গ্রামার শিখুন </a>
+                <a href="quranic-grammar.html" target="_blank" class="px-10 py-5 bg-blue-600 hover:bg-blue-700 rounded-2xl font-bold text-lg shadow-xl shadow-blue-500/20 transition-all"> কুরআনিক গ্রামার শিখুন </a>
             </div>
         </div>
     </header>
@@ -211,6 +211,7 @@
 </body>
 
 </html>
+
 
 
 
